--- a/README
+++ b/README
@@ -1,2 +1,4 @@
-78cp_clone is a stand alone gang-duplicator for SD cards written entirely is bash script.  It is built and tested on a Raspberry Pi.  
+78cp_clone is a stand alone gang-duplicator for SD cards, entirely is bash script.  It is built and tested on and for a Raspberry Pi.
+
+
 
